handle case, if request is looking for favicon.ico from another path.

--- a/html/hehe/hello.html
+++ b/html/hehe/hello.html
@@ -10,7 +10,7 @@
  
     <body>
         <h1>Hello ....</h1>
-		<p>is it me you're looking for?</p>
-		<p>from Lionel Richie.</p>
+		<p>Bis hier hin liefs noch gut</p>
+		<p>from Lars Ulrich.</p>
     </body>
 </html>
