--- a/html/index.html
+++ b/html/index.html
@@ -6,6 +6,7 @@
             [Analog Server] - from DMS
         </title>
 		<link rel="icon" href="favicon.ico">
+		<link rel="stylesheet" href="index.css">
     </head>
  
     <body>
