add default error pages.

--- a/html/error404.html
+++ b/html/error404.html
@@ -9,6 +9,6 @@
 
 	<body>
 		<h4> 404 - what are you doing here sweaty? </h4>
-		<img src="tumblr_404.jpg" alt="Looking at you makes me sad">
+		<img src="tumblr_404.jpg" alt="Looking at you makes me sad" width="1000px" height="1000px">
 	</body>
 </html>
