hallo von toni :)

--- a/eval/index.html
+++ b/eval/index.html
@@ -15,9 +15,7 @@
 		
 		<a href="irgendwas">Titel vom Tag</a>
 
-		<div id="rnd_img">
-			<img src="./imgs/fuck_off.png" alt="Blah blah blah" />
-		</div>
+		<img id="rnd_img" src="./imgs/fuck_off.jpg" alt="Blah blah blah" />
 		
     </body>
 </html>
