some eval representations made!

--- a/eval/pink_index.html
+++ b/eval/pink_index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
  
 <html>
@@ -6,16 +7,19 @@
             [Analog Server] - from DMS
         </title>
 		<link rel="icon" href="favicon.ico">
-		<link rel="stylesheet" href="index.css">
+		<link rel="stylesheet" href="pink.css">
     </head>
  
-    <body style="text-align: center; background-image: './imgs/background.jpg';">
+    <body style="text-align: center; 
+        background-color: #ffa9cc;
+        font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"
+        >
         <h1>Welcome to the evaluation!</h1>
 		<p>Here you will have a list of features to test in different webpages.</p>
 		
 		<a href="irgendwas">Titel vom Tag</a>
 
-		<img id="rnd_img" src="./imgs/fuck_off.jpg" alt="Blah blah blah" />
+		<img id="rnd_img" style="float:right" src="./img/pink_index.jpg" alt="Index picture" />
 		
     </body>
 </html>
