prepare CGI on HttpAction.

--- a/error/542.html
+++ b/error/542.html
@@ -3,12 +3,12 @@
 <html>
     <head>
         <title>
-            [405 - Method Not Allowed]
+            [542 - Internal CGI Error]
         </title>
 		<link rel="icon" href="favicon.ico">
     </head>
  
     <body>
-        <h1>405: Method Not Allowed.</h1>
+        <h1>Internal CGI Error.</h1>
     </body>
 </html>
