pink index changed

--- a/eval/pink_index.html
+++ b/eval/pink_index.html
@@ -15,11 +15,8 @@
         font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"
         >
         <h1>Welcome to the evaluation!</h1>
-		<p>Here you will have a list of features to test in different webpages.</p>
-		
-		<a href="irgendwas">Titel vom Tag</a>
 
-		<img id="rnd_img" style="float:right" src="./img/pink_index.jpg" alt="Index picture" />
+		<img id="rnd_img" src="./img/pink_index.jpg" alt="Index picture" />
 		
     </body>
 </html>
