--- a/eval/blue_index.html
+++ b/eval/blue_index.html
@@ -18,8 +18,9 @@
 		
         
 		<img id="rnd_img" style="float:right" src="./img/blue_index.jpg" alt="Index picture" />
-		<a href="./nonexistent" style="color: white;">try to go to a nonexistent route and see a magnificent error page!</a> <br> <br>
-		<a href="./only_delete/" style="color: white;">go to route "/only_delete" and get an invalid request error, since it only accepts DELETE requests!</a>
+		<a href="./nonexistent" style="color: white; font-size: 20px;">try to go to a nonexistent route and see a magnificent error page!</a> <br> <br>
+		<a href="./only_delete" style="color: white; font-size: 20px;">go to route "/only_delete" and get an invalid request error, since it only accepts DELETE requests!</a> <br> <br>
+		<a href="./buttons.html" style="color: white; font-size: 20px;">test out different cgi programs!</a> <br> <br>
 		
     </body>
 </html>
