--- a/html/hehe/hello.html
+++ b/html/hehe/hello.html
@@ -12,5 +12,8 @@
         <h1>Hello ....</h1>
 		<p>Bis hier hin liefs noch gut</p>
 		<p>from Lars Ulrich.</p>
+		<form action = "hehe/goodbye.html" method="POST" enctype="multipart/form-data">
+			<p>POST file = <input type="file" name="file1"> <button type="submit">Upload</button></p>
+		</form><br>
     </body>
 </html>
