--- a/eval/blue_index.html
+++ b/eval/blue_index.html
@@ -1,26 +1,39 @@
 <!DOCTYPE html>
  
 <html>
-    <head>
-        <title>
-            [Analog Server] - from DMS
-        </title>
+	<head>
+		<title>
+			[Analog Server] - from DMS
+		</title>
 		<link rel="icon" href="favicon.ico">
 		<link rel="stylesheet" href="blue.css">
-    </head>
+	</head>
  
-    <body style="text-align: left;
-        background-color: #7d91f0;
-        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"
-        >
-        <h1 style="text-align: center;">Welcome to the evaluation!</h1>
-		<p style="text-align: center;">Here you will have a list of features to test in different webpages.</p>
+	<body style="text-align: left;
+		background-color: #7d91f0;
+		font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"
+		>
+		<h1>Welcome to the evaluation!</h1>
+		<h4>Here you will have a list of features to test in different webpages.</h4>
 		
-        
 		<img id="rnd_img" style="float:right" src="./img/blue_index.jpg" alt="Index picture" />
-		<a href="./nonexistent" style="color: white; font-size: 20px;">try to go to a nonexistent route and see a magnificent error page!</a> <br> <br>
-		<a href="./only_delete" style="color: white; font-size: 20px;">go to route "/only_delete" and get an invalid request error, since it only accepts DELETE requests!</a> <br> <br>
-		<a href="./buttons.html" style="color: white; font-size: 20px;">test out different cgi programs!</a> <br> <br>
+		<form action = "/blue_index.html" method="POST" enctype="multipart/form-data">
+			<p> Upload a file to the server:</p>
+            <input type="file" name="file1"> <button type="submit">Upload</button>
+		</form><br> <br>
+		<a href="./buttons.html">test out different cgi programs!</a> <br> <br>
+        <a href="./nonexistent">try to go to a nonexistent route and see a magnificent error page!</a> <br> <br>
+		<a href="./only_delete">go to route "/only_delete" and get an invalid request error, since it only accepts DELETE requests!</a> <br> <br>
+		<a href="./redir/">go to route "/redir", which redirects to route "dark"</a> <br> <br>
+		<a href="./dark/">access the dark side directly</a>   <a style="color: white;" href="./light/">access the light side directly</a> <br> <br>
+		<a href="./dark/invalid">Directory listing enabled in dark</a>   <a style="color: white;" href="./light/invalid">Directory listing disabled in light</a> <br> <br>
+		<a href="./dark/telephone.py?name=Evaluator">Python CGI in dark is not allowed</a>   <a style="color: white;" href="./light/telephone.py?name=Evaluator">Python CGI in light is allowed</a> <br> <br>
+		<a href="./dark/telephone.cgi?name=Evaluator">Executable CGI in dark is allowed</a>   <a style="color: white;" href="./light/telephone.cgi?name=Evaluator">Executable CGI in light is not allowed</a> <br> <br>
+		<a href="./dark/dark_upload.html">Talk to the light side</a>   <a style="color: white;" href="./light/light_upload.html">Talk to the dark side</a> <br> <br>
 		
-    </body>
+		<audio controls autoplay>
+			<source src="./audio/blue_index.mp3" type="audio/mp3">
+			Your browser does not support the audio element
+		</audio> 
+	</body>
 </html>
