--- a/eval/blue_index.html
+++ b/eval/blue_index.html
@@ -17,10 +17,17 @@
 		<h4>Here you will have a list of features to test in different webpages.</h4>
 		
 		<img id="rnd_img" style="float:right" src="./img/blue_index.jpg" alt="Index picture" />
+		
 		<form action = "/blue_index.html" method="POST" enctype="multipart/form-data">
 			<p> Upload a file to the server:</p>
             <input type="file" name="file1"> <button type="submit">Upload</button>
-		</form><br> <br>
+		</form><br>
+
+		<form action = "/delete1.txt" method="DELETE" enctype="multipart/form-data">
+			<p> Delete file "delete1.txt"</p>
+			<input type="hidden" name="_method" value="DELETE"> <button type="submit">Delete</button>
+		</form><br>
+
 		<a href="./buttons.html">test out different cgi programs!</a> <br> <br>
         <a href="./nonexistent">try to go to a nonexistent route and see a magnificent error page!</a> <br> <br>
 		<a href="./only_delete">go to route "/only_delete" and get an invalid request error, since it only accepts DELETE requests!</a> <br> <br>
