use delete method in blue_index.html

--- a/eval/blue_index.html
+++ b/eval/blue_index.html
@@ -23,7 +23,7 @@
             <input type="file" name="file1"> <button type="submit">Upload</button>
 		</form><br>
 
-		<form action = "/delete1.txt" method="DELETE" enctype="multipart/form-data">
+		<form action = "/delete/delete1.txt" method="DELETE" enctype="multipart/form-data">
 			<p> Delete file "delete1.txt"</p>
 			<input type="hidden" name="_method" value="DELETE"> <button type="submit">Delete</button>
 		</form><br>
