--- a/eval/blue_index.html
+++ b/eval/blue_index.html
@@ -16,6 +16,8 @@
 		<h1>Welcome to the evaluation!</h1>
 		<h4>Here you will have a list of features to test in different webpages.</h4>
 		
+		<div id="main">
+
 		<img id="rnd_img" style="float:right" src="./img/blue_index.jpg" alt="Index picture" />
 		
 		<form action = "/blue_index.html" method="POST" enctype="multipart/form-data">
@@ -41,6 +43,7 @@
 		<audio controls autoplay>
 			<source src="./audio/blue_index.mp3" type="audio/mp3">
 			Your browser does not support the audio element
-		</audio> 
+		</audio>
+		</div>
 	</body>
 </html>
