i have in fact given up

--- a/eval/buttons.html
+++ b/eval/buttons.html
@@ -42,11 +42,11 @@
               <button>Say hello to the *fancy* Python program</button>
             </div>
         </form> <br> <br>
-        <form action="http://localhost:6060/webscrap_mal.py" method="GET">
-            <div>
-              <button>Find out what the Top rated 100 anime are! Can you guess number 1?</button>
-            </div>
-        </form> <br> <br>
+        <!-- <form action="http://localhost:6060/webscrap_mal.py" method="GET"> -->
+        <!--     <div> -->
+        <!--       <button>Find out what the Top rated 100 anime are! Can you guess number 1?</button> -->
+        <!--     </div> -->
+        <!-- </form> <br> <br> -->
 		
     </body>
 </html>
